[gd_scene load_steps=4 format=3 uid="uid://by7lohsb5qfwj"]

[ext_resource type="Script" path="res://Misc/MainMenu.gd" id="1_av7h0"]
[ext_resource type="Texture2D" uid="uid://bppm8uh53w1ux" path="res://Assets/UI/UI_titleScreen_logo.png" id="2_exgt4"]
[ext_resource type="Theme" uid="uid://d0u5mofsrkc7b" path="res://Assets/UI/theme.tres" id="2_yt4kf"]

[node name="UI_MainMenu" type="CanvasLayer"]
script = ExtResource("1_av7h0")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_exgt4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0

[node name="StartGame_Btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_yt4kf")
keep_pressed_outside = true
text = "Start Game"
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="Label_Music" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yt4kf")
text = "Music"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Slider_Music" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yt4kf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="Label_SFX" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_yt4kf")
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Slider_SFX" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_yt4kf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGame_Btn" to="." method="_on_start_game_btn_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/Slider_Music" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2/Slider_SFX" to="." method="_on_slider_sfx_value_changed"]
